Notes and Spelling Updates (#7)
I found some spelling updates while puling verbiage for 4H office.  I’m
adding these now since I saw them.

--- a/www/apply.html
+++ b/www/apply.html
@@ -186,7 +186,7 @@
                     <option value="7">7th</option>
                     <option value="8">8th</option>
                     <option value="9">Freshman</option>
-                    <option value="10">Sophmore</option>
+                    <option value="10">Sophomore</option>
                     <option value="11">Junior</option>
                     <option value="12">Senior</option>
                   </select>
@@ -212,7 +212,7 @@
                 <div class="form-group col-md-12">
                   <label class="control-label" for="studentRole">What primary role are you applying for?</label>
                     <select class="form-control" id="studentRole" name="studentRole">
-                      <option value="business" selected=true >Business Adminstration</option>
+                      <option value="business" selected=true >Business Administration</option>
                       <option value="build" >Build and Manufacturing</option>
                       <option value="cad">Computer Aided Design (CAD)</option>
                       <option value="code">Control Systems and Code</option>
@@ -314,7 +314,7 @@
                 <img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark">
 
                 <img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" >
-                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png">
+                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4H Timeless Clovers">
                 <img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone">
                 <img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial">
                 <img src="/images/mcr/sponsors/mdg_FirstFarmersSB.png" alt="First Farmers State Bank">
