--- a/www/applySuccess.html
+++ b/www/applySuccess.html
@@ -133,7 +133,7 @@
           <br/>
           <h6 class="raleway">Now you are probably asking, <strong><em>what's next?</em></strong><br><br>
           After reviewing your application we will contact you via email to setup an interview.
-        This is not an elimination interview, it is an opportunity for you to meet with us, discuss your interests and goals, and to aks us questions.
+        This is not an elimination interview, it is an opportunity for you to meet with us, discuss your interests and goals, and to ask us questions.
       We want to make sure that your experience on the team is successful and aligns with your goals, and that you understand the team's dynamics.<br><br>
     After the interview you can complete your registration and start building robots with us!</h6>
           <p>In the meantime connect with us online at:</p>
@@ -249,7 +249,7 @@
                 <img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark">
 
                 <img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" >
-                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png">
+                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4H Timeless Clovers">
                 <img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone">
                 <img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial">
                 <img src="/images/mcr/sponsors/mdg_FirstFarmersSB.png" alt="First Farmers State Bank">
