--- a/www/index.html
+++ b/www/index.html
@@ -134,7 +134,7 @@
 			data-splitin="none"
 			data-splitout="none"
 			data-responsive_offset="on"
-			style="z-index: 7; white-space: nowrap;">Part Sport, Part Tehnology, 100% Awesome!</div>
+			style="z-index: 7; white-space: nowrap;">Part Sport, Part Technology, 100% Awesome!</div>
 
                 <!-- LAYER NR. 2 -->
                 <div class="tp-caption montserrat fweight-6 text-white tp-resizeme"
@@ -366,7 +366,7 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <h3 class="less-mar-1 font-weight-4 line-height-4 text-white">MetalCow Robotics is a hands-on team that builds from scratch. </h3>
-          <p class="text-white">Our students aquire STEM skills, build confidence, teamwork, public speaking skills, and learn from industry professionals. </p>
+          <p class="text-white">Our students acquire STEM skills, build confidence, teamwork, public speaking skills, and learn from industry professionals. </p>
           <div class="clearfix"></div>
           <br/>
           <a class="btn btn-white btn-round uppercase" href="join"><i class="fa fa-play-circle" aria-hidden="true"></i> Join Today</a>
@@ -427,7 +427,7 @@
                 <img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark">
 
                 <img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" >
-                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png">
+                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4H Timeless Clovers">
                 <img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone">
                 <img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial">
                 <img src="/images/mcr/sponsors/mdg_FirstFarmersSB.png" alt="First Farmers State Bank">
