--- a/www/join.html
+++ b/www/join.html
@@ -138,7 +138,7 @@
             <h2 class="font-weight-7 less-mar-1">build a robot & your resume</h2>
             <br/>
             <h6 class="raleway">MetalCow Robotics is a <strong>4-H SPIN club</strong> that participates in <strong>FIRST Robotics Competition.</strong>
-              The team is made up of students ages 13 to 18 from the McLean County area. Our members come from all local high-shcools and the homeschool community.
+              The team is made up of students ages 13 to 18 from the McLean County area. Our members come from all local high-schools and the homeschool community.
               MetalCow students manage the business of the team and work together to create robots from the ground up.
             </h6>
             <p>As a member of MetalCow you will:</p>
@@ -234,7 +234,7 @@
                 <h5 class="font-weight-4 less-mar-1 line-height-4 text-primary opacity-9">Skill building and mastery</h5>
                 <h2 class="font-weight-6 less-mar-1 text-white line-height-5">Find your passion</h2>
                 <div class="ce-title-line"></div>
-                <h6 class="ce-sub-text text-white raleway opacity-5">On MetalCow students choose the role that interests them. The most important qualities the team is looking for in members is an interest in learning new things, and an enthusiasm to apply those things in an organization with a innovative mentality.
+                <h6 class="ce-sub-text text-white raleway opacity-5">On MetalCow students choose the role that interests them. The most important qualities the team is looking for in members is an interest in learning new things, and an enthusiasm to apply those things in an organization with an innovative mentality.
                   The skills our team needs are wide-ranging, and everyone does a little bit of everything.  Don't worry if you are unsure of which role you will <em>click</em> with, many times students join our team not really knowing where they want to focus but find their passion as they explore different roles.</h6>
               </div>
             </div>
@@ -265,7 +265,7 @@
                 <br/>
                 <div class="text-box">
                   <h5 class="title font-weight-5">Design & Manufacturing</h5>
-                  <p>The build team performs the manufacturing of the robot; creating and maintaining the physical aspect of the robots. Students learn proper build safety, how to turn Solidworks CAD plans into a physical object, electrical, and basic metal work skills. Students with an interest in mechanical design, electrical work, arcitecture, metalworking, or with a passion for hands on creation would thrive in the immersive build experience offered by MetalCow Robotics and the FIRST program.</p>
+                  <p>The build team performs the manufacturing of the robot; creating and maintaining the physical aspect of the robots. Students learn proper build safety, how to turn Solidworks CAD plans into a physical object, electrical, and basic metal work skills. Students with an interest in mechanical design, electrical work, architecture, metalworking, or with a passion for hands on creation would thrive in the immersive build experience offered by MetalCow Robotics and the FIRST program.</p>
                   <br/>
                   <br/>
                   <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="apply"><i class="fa fa-play-circle" aria-hidden="true"></i> Apply</a> </div>
@@ -281,7 +281,7 @@
                 <br/>
                 <div class="text-box">
                   <h5 class="title font-weight-5">Code & Electrical</h5>
-                  <p>Learn and use the Java programming language as well as electrical wiring and soldering to create the control system that brings life to the robot. Working as a team students will program the robot to run autonomously as well as create a system to be operated by a driver. They also have opportunities to create apps or build web sites. Students who enjoy coding, web design, have an interest in becoming a computer programer, or electical engineer would enjoy this aspect of the robotics team.</p>
+                  <p>Learn and use the Java programming language as well as electrical wiring and soldering to create the control system that brings life to the robot. Working as a team students will program the robot to run autonomously as well as create a system to be operated by a driver. They also have opportunities to create apps or build web sites. Students who enjoy coding, web design, have an interest in becoming a computer programmer, or electrical engineer would enjoy this aspect of the robotics team.</p>
                   <br/>
                   <br/>
                   <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="apply"><i class="fa fa-play-circle" aria-hidden="true"></i> Apply</a> </div>
@@ -413,7 +413,7 @@
                 <img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark">
 
                 <img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" >
-                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png">
+                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4H Timeless Clovers">
                 <img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone">
                 <img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial">
                 <img src="/images/mcr/sponsors/mdg_FirstFarmersSB.png" alt="First Farmers State Bank">
