--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -158,7 +158,7 @@
 
               <div class="iconlist-2">
                 <div class="icon dark"><i class="fa fa-arrow-circle-right text-primary"></i></div>
-                <div class="text">Pay for tavel and hotel fees</div>
+                <div class="text">Pay for travel and hotel fees</div>
               </div>
               <!--end item-->
 
@@ -419,7 +419,7 @@
 <div class="row" style="display:none;">
 <div class="col-md-6">
 <label class="label-text" for="mysubject"> Subject</label>
-<input id="mysubject" name="mysubject" class="input-1" type="text" placeholder="Subject" value="I am interested in sponsoring Metalow Robotics">
+<input id="mysubject" name="mysubject" class="input-1" type="text" placeholder="Subject" value="I am interested in sponsoring MetalCow Robotics">
 </div>
 </div>
 <!-- end row -->
@@ -497,7 +497,7 @@
                 <img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark">
 
                 <img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" >
-                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png">
+                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4H Timeless Clovers">
                 <img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone">
                 <img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial">
                 <img src="/images/mcr/sponsors/mdg_FirstFarmersSB.png" alt="First Farmers State Bank">
