--- a/www/apply.html
+++ b/www/apply.html
@@ -199,7 +199,7 @@
                 <div class="form-group col-md-12">
                   <label class="control-label" for="studentCommitments">Other Commitments:</label>
                     <textarea type="comment" class="form-control" id="studentCommitments" name="studentCommitments" rows="5"
-                    placeholder="Please describe your other activities and commitments (sports, work, groups) and activities during the Fall, Summer and Spring.  Spring (January through April) is competition season, and the team is active as a 4H Club year-round." required></textarea>
+                    placeholder="Please describe your other activities and commitments (sports, work, groups) and activities during the Fall, Summer and Spring.  Spring (January through April) is competition season, and the team is active as a 4-H Club year-round." required></textarea>
                 </div>
               </div>
 <br><hr><br>
@@ -210,7 +210,7 @@
                   <textarea type="text" class="form-control" id="studentReference" name="studentReference" rows="3" required></textarea>
                 </div>
                 <div class="form-group col-md-12">
-                  <label class="control-label" for="studentRole">What primary role are you applying for?</label>
+                  <label class="control-label" for="studentRole">What primary role are you interested in?</label>
                     <select class="form-control" id="studentRole" name="studentRole">
                       <option value="business" selected=true >Business Administration</option>
                       <option value="build" >Build and Manufacturing</option>
@@ -234,7 +234,7 @@
                 <div class="col-md-12">
                   <button class="btn btn-dark btn-medium uppercase" style="background-color: #a9cd2e;" type="submit">
                   <i class="fa fa-paper-plane"></i>
-                   Submit Application
+                   Submit Information
                   </button>
                 </div>
 
@@ -273,7 +273,7 @@
             <div class="fo-map">
               <div class="footer-logo"><img src="images/logo/logo-mcr.png" alt=""/></div>
               <p>MetalCow Robotics has been providing McLean County students a hands-on STEM education and career readiness experience since 2011.</p>
-              <p>A 4H-SPIN Club which competes in FIRST Robotics Competition, MetalCow Robotics is a 501.c.3 non-profit organization.</p>
+              <p>A 4-H SPIN Club which competes in FIRST Robotics Competition, MetalCow Robotics is part of a 501.c.3 non-profit organization.</p>
             </div>
           </div>
           <!--end item-->
@@ -314,7 +314,7 @@
                 <img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark">
 
                 <img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" >
-                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4H Timeless Clovers">
+                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4-H Timeless Clovers">
                 <img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone">
                 <img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial">
                 <img src="/images/mcr/sponsors/mdg_FirstFarmersSB.png" alt="First Farmers State Bank">
@@ -326,7 +326,7 @@
                 <img src="/images/mcr/sponsors/mdg_G3.png" alt="G3 Machining">
                 <img src="/images/mcr/sponsors/mdg_StateFarm.png" alt="State Farm">
                 <img src="/images/mcr/sponsors/mdg_McLeanCountyHomeEducation.png" alt="McLean County Home Education">
-                <img src="/images/mcr/sponsors/mdg_4H.png" alt="4H">
+                <img src="/images/mcr/sponsors/mdg_4H.png" alt="4-H">
                 <img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics">
 
           </div>
