--- a/www/applySuccess.html
+++ b/www/applySuccess.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>MetalCow Robotics - FRC Team 4213 | Student Application </title>
+<title>MetalCow Robotics - FRC Team 4213 | Student Interest </title>
 <meta name="keywords" content="" />
 <meta name="description" content="">
 <meta name="author" content="">
@@ -114,7 +114,7 @@
         <div class="header-inner"><div class="overlay">
        <div class="text text-center">
     <h2 class="uppercase text-white mcr_title">Thank You,</h2>
-    <h6 class="uppercase text-white sub-title"><em>Your application has been received!</em></h6>
+    <h6 class="uppercase text-white sub-title"><em>Your information has been received!</em></h6>
     </div>
        </div>
         </div></div>
@@ -132,10 +132,10 @@
           <h2 class="font-weight-7 less-mar-1">to becoming a MetalCow!</h2>
           <br/>
           <h6 class="raleway">Now you are probably asking, <strong><em>what's next?</em></strong><br><br>
-          After reviewing your application we will contact you via email to setup an interview.
-        This is not an elimination interview, it is an opportunity for you to meet with us, discuss your interests and goals, and to ask us questions.
-      We want to make sure that your experience on the team is successful and aligns with your goals, and that you understand the team's dynamics.<br><br>
-    After the interview you can complete your registration and start building robots with us!</h6>
+          After reviewing your information we will contact you via email to setup a time to meet in person.
+          This meeting will be an opportunity for you to tour the workshop, discuss your interests and goals, and to ask us questions.
+          We want to make sure that your experience on the team is successful and aligns with your goals, and that you understand the team's dynamics.<br><br>
+          After the meeting you can complete your registration and start building robots with us!</h6>
           <p>In the meantime connect with us online at:</p>
             <div class="iconlist-2">
               <div class="icon dark"><i class="fab fa-facebook text-primary"></i></div>
@@ -208,7 +208,7 @@
             <div class="fo-map">
               <div class="footer-logo"><img src="images/logo/logo-mcr.png" alt=""/></div>
               <p>MetalCow Robotics has been providing McLean County students a hands-on STEM education and career readiness experience since 2011.</p>
-              <p>A 4H-SPIN Club which competes in FIRST Robotics Competition, MetalCow Robotics is a 501.c.3 non-profit organization.</p>
+              <p>A 4-H SPIN Club which competes in FIRST Robotics Competition, MetalCow Robotics is part of a 501.c.3 non-profit organization.</p>
             </div>
           </div>
           <!--end item-->
@@ -249,7 +249,7 @@
                 <img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark">
 
                 <img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" >
-                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4H Timeless Clovers">
+                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4-H Timeless Clovers">
                 <img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone">
                 <img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial">
                 <img src="/images/mcr/sponsors/mdg_FirstFarmersSB.png" alt="First Farmers State Bank">
@@ -261,7 +261,7 @@
                 <img src="/images/mcr/sponsors/mdg_G3.png" alt="G3 Machining">
                 <img src="/images/mcr/sponsors/mdg_StateFarm.png" alt="State Farm">
                 <img src="/images/mcr/sponsors/mdg_McLeanCountyHomeEducation.png" alt="McLean County Home Education">
-                <img src="/images/mcr/sponsors/mdg_4H.png" alt="4H">
+                <img src="/images/mcr/sponsors/mdg_4H.png" alt="4-H">
                 <img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics">
 
           </div>
