--- a/www/index.html
+++ b/www/index.html
@@ -184,7 +184,7 @@
 			data-transform_out="opacity:0;s:3000;e:Power4.easeIn;s:3000;e:Power4.easeIn;"
 			data-endspeed="300"
 			data-captionhidden="off"
-			style="z-index: 6"> <a href="/join">Apply Today!</a></div>
+			style="z-index: 6"> <a href="/join">Join Today!</a></div>
               </li>
             </ul>
           </div>
@@ -290,7 +290,7 @@
 
               <p class="text-white">
                 MetalCow Robotics is a <strong><a href="http://web.extension.illinois.edu/lmw/mclean4h/">4-H SPIN</a></strong>
-                club that participates in <strong><a href="https://www.firstinspires.org/robotics/frc">FIRST</a></strong> Robotics Competition.
+                Club that participates in <strong><a href="https://www.firstinspires.org/robotics/frc">FIRST</a></strong> Robotics Competition.
                 But, it is much more than robotics; it is a small business where members learn digital media,
                 advertising, web design, public speaking, business skills, and leadership.
               </br></br>
@@ -386,7 +386,7 @@
             <div class="fo-map">
               <div class="footer-logo"><img src="images/logo/logo-mcr.png" alt=""/></div>
               <p>MetalCow Robotics has been providing McLean County students a hands-on STEM education and career readiness experience since 2011.</p>
-              <p>A 4H-SPIN Club which competes in FIRST Robotics Competition, MetalCow Robotics is a 501.c.3 non-profit organization.</p>
+              <p>A 4-H SPIN Club which competes in FIRST Robotics Competition, MetalCow Robotics is part of a 501.c.3 non-profit organization.</p>
             </div>
           </div>
           <!--end item-->
@@ -427,7 +427,7 @@
                 <img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark">
 
                 <img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" >
-                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4H Timeless Clovers">
+                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4-H Timeless Clovers">
                 <img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone">
                 <img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial">
                 <img src="/images/mcr/sponsors/mdg_FirstFarmersSB.png" alt="First Farmers State Bank">
@@ -439,7 +439,7 @@
                 <img src="/images/mcr/sponsors/mdg_G3.png" alt="G3 Machining">
                 <img src="/images/mcr/sponsors/mdg_StateFarm.png" alt="State Farm">
                 <img src="/images/mcr/sponsors/mdg_McLeanCountyHomeEducation.png" alt="McLean County Home Education">
-                <img src="/images/mcr/sponsors/mdg_4H.png" alt="4H">
+                <img src="/images/mcr/sponsors/mdg_4H.png" alt="4-H">
                 <img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics">
 
           </div>
