--- a/www/join.html
+++ b/www/join.html
@@ -88,7 +88,7 @@
                       <li class="right active"> <a href="join">Join</a> </li>
                       <li> <a href="mentor">Mentor</a> </li>
                       <li> <a href="sponsor">Sponsor</a> </li>
-                      <li> <a href="comps"">Competition</a>
+                      <li> <a href="comps">Competition</a>
                     </ul>
                   </div>
                 </div>
@@ -197,7 +197,7 @@
           <p class="text-white">Our students aquire STEM skills, build confidence, teamwork, public speaking skills, and learn from industry professionals. </p>
           <div class="clearfix"></div>
           <br/>
-          <a class="btn btn-white btn-round uppercase" href="apply"><i class="fa fa-play-circle" aria-hidden="true"></i> Apply Today!</a>
+          <a class="btn btn-white btn-round uppercase" href="apply"><i class="fa fa-play-circle" aria-hidden="true"></i> Join Today!</a>
       </div>
     </div>
   </section>
@@ -234,8 +234,8 @@
                 <h5 class="font-weight-4 less-mar-1 line-height-4 text-primary opacity-9">Skill building and mastery</h5>
                 <h2 class="font-weight-6 less-mar-1 text-white line-height-5">Find your passion</h2>
                 <div class="ce-title-line"></div>
-                <h6 class="ce-sub-text text-white raleway opacity-5">On MetalCow students choose the role that interests them. The most important qualities the team is looking for in members is an interest in learning new things, and an enthusiasm to apply those things in an organization with an innovative mentality.
-                  The skills our team needs are wide-ranging, and everyone does a little bit of everything.  Don't worry if you are unsure of which role you will <em>click</em> with, many times students join our team not really knowing where they want to focus but find their passion as they explore different roles.</h6>
+                <h6 class="ce-sub-text text-white raleway opacity-5">MetalCow students choose the role that interests them. The most important qualities the team is looking for in members is an interest in learning new things, and an enthusiasm to apply those things in an organization with an innovative mentality.
+                  The skills our team needs are wide-ranging, and everyone does a little bit of everything.  Don't worry if you are unsure of which role you will <em>click</em> with. Many times students join our team not really knowing where they want to focus, but find their passion as they explore different roles.</h6>
               </div>
             </div>
             <div class="clearfix"></div>
@@ -249,10 +249,10 @@
                 <br/>
                 <div class="text-box">
                   <h5 class="title font-weight-5">Business & Marketing</h5>
-                  <p>The business team works to promote the team to investors and creates the written and visual materials for branding the team. They a responsible for award submissions, the website, managing the social media for the team and create the printed material the team utilizes. Students with an interest in graphic design, marketing, social media management, or who see themselves as an entrepreneur and hope to run a business of their own someday would excel at the challenges in this department.</p>
+                  <p>The business team works to promote the team to investors and creates the written and visual materials for branding the team. They are responsible for award submissions, the website, managing the social media for the team and creating the printed material the team utilizes. Students with an interest in graphic design, marketing, social media management, or who see themselves as an entrepreneur and hope to run a business of their own someday would excel at the challenges in this department.</p>
                   <br/>
                   <br/>
-                  <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="apply"><i class="fa fa-play-circle" aria-hidden="true"></i> Apply</a> </div>
+                  <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="apply"><i class="fa fa-play-circle" aria-hidden="true"></i> Join</a> </div>
               </div>
             </div>
             <!--end item-->
@@ -265,10 +265,10 @@
                 <br/>
                 <div class="text-box">
                   <h5 class="title font-weight-5">Design & Manufacturing</h5>
-                  <p>The build team performs the manufacturing of the robot; creating and maintaining the physical aspect of the robots. Students learn proper build safety, how to turn Solidworks CAD plans into a physical object, electrical, and basic metal work skills. Students with an interest in mechanical design, electrical work, architecture, metalworking, or with a passion for hands on creation would thrive in the immersive build experience offered by MetalCow Robotics and the FIRST program.</p>
+                  <p>The build team performs the manufacturing of the robot; creating and maintaining the physical aspect of the robots. Students learn proper build safety, how to turn Solidworks CAD plans into a physical object, electrical, and basic metal work skills. Students with an interest in mechanical design, electrical work, architecture, metalworking, or with a passion for hands-on creation would thrive in the immersive build experience offered by MetalCow Robotics and the FIRST program.</p>
                   <br/>
                   <br/>
-                  <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="apply"><i class="fa fa-play-circle" aria-hidden="true"></i> Apply</a> </div>
+                  <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="apply"><i class="fa fa-play-circle" aria-hidden="true"></i> Join</a> </div>
               </div>
             </div>
             <!--end item-->
@@ -281,10 +281,10 @@
                 <br/>
                 <div class="text-box">
                   <h5 class="title font-weight-5">Code & Electrical</h5>
-                  <p>Learn and use the Java programming language as well as electrical wiring and soldering to create the control system that brings life to the robot. Working as a team students will program the robot to run autonomously as well as create a system to be operated by a driver. They also have opportunities to create apps or build web sites. Students who enjoy coding, web design, have an interest in becoming a computer programmer, or electrical engineer would enjoy this aspect of the robotics team.</p>
+                  <p>Learn and use the Java programming language as well as electrical wiring and soldering to create the control system that brings life to the robot. Working as a team students will program the robot to run autonomously, and create a system to be operated by a human driver. They also have opportunities to create apps or build web sites. Students who enjoy coding, web design, have an interest in becoming a computer programmer, or electrical engineer would enjoy this aspect of the robotics team.</p>
                   <br/>
                   <br/>
-                  <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="apply"><i class="fa fa-play-circle" aria-hidden="true"></i> Apply</a> </div>
+                  <a class="btn btn-prim btn-darkBg btn-round btn-medium uppercase" href="apply"><i class="fa fa-play-circle" aria-hidden="true"></i> Join</a> </div>
               </div>
             </div>
             <!--end item-->
@@ -372,7 +372,7 @@
             <div class="fo-map">
               <div class="footer-logo"><img src="images/logo/logo-mcr.png" alt=""/></div>
               <p>MetalCow Robotics has been providing McLean County students a hands-on STEM education and career readiness experience since 2011.</p>
-              <p>A 4H-SPIN Club which competes in FIRST Robotics Competition, MetalCow Robotics is a 501.c.3 non-profit organization.</p>
+              <p>A 4-H SPIN Club which competes in FIRST Robotics Competition, MetalCow Robotics is part of a 501.c.3 non-profit organization.</p>
             </div>
           </div>
           <!--end item-->
@@ -413,7 +413,7 @@
                 <img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark">
 
                 <img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" >
-                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4H Timeless Clovers">
+                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4-H Timeless Clovers">
                 <img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone">
                 <img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial">
                 <img src="/images/mcr/sponsors/mdg_FirstFarmersSB.png" alt="First Farmers State Bank">
@@ -425,7 +425,7 @@
                 <img src="/images/mcr/sponsors/mdg_G3.png" alt="G3 Machining">
                 <img src="/images/mcr/sponsors/mdg_StateFarm.png" alt="State Farm">
                 <img src="/images/mcr/sponsors/mdg_McLeanCountyHomeEducation.png" alt="McLean County Home Education">
-                <img src="/images/mcr/sponsors/mdg_4H.png" alt="4H">
+                <img src="/images/mcr/sponsors/mdg_4H.png" alt="4-H">
                 <img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics">
 
           </div>
