--- a/www/mentor.html
+++ b/www/mentor.html
@@ -344,7 +344,7 @@
 <section class="sec-padding section-primary">
   <div class="container">
   <div class="col-md-12 text-center">
-    <h2 class="font-weight-6 less-mar-1 line-height-5">Become and Mentor, Apply Today!</h2>
+    <h2 class="font-weight-6 less-mar-1 line-height-5">Become and Mentor, Join Today!</h2>
     <br />
   </div>
 
@@ -387,7 +387,7 @@ placeholder="Tell us about yourself! (career/education/skills, mentoring experie
 <br/>
 <div class="col col-md-12 text-center">
   <button class="btn btn-dark btn-medium uppercase" type="submit">
-  <i class="fa fa-paper-plane"></i> Submit Application
+  <i class="fa fa-paper-plane"></i> Submit Information
   </button>
 </div>
 </div>
@@ -408,7 +408,7 @@ placeholder="Tell us about yourself! (career/education/skills, mentoring experie
             <div class="fo-map">
               <div class="footer-logo"><img src="images/logo/logo-mcr.png" alt=""/></div>
               <p>MetalCow Robotics has been providing McLean County students a hands-on STEM education and career readiness experience since 2011.</p>
-              <p>A 4H-SPIN Club which competes in FIRST Robotics Competition, MetalCow Robotics is a 501.c.3 non-profit organization.</p>
+              <p>A 4-H SPIN Club which competes in FIRST Robotics Competition, MetalCow Robotics is part of a 501.c.3 non-profit organization.</p>
             </div>
           </div>
           <!--end item-->
@@ -449,7 +449,7 @@ placeholder="Tell us about yourself! (career/education/skills, mentoring experie
                 <img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark">
 
                 <img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" >
-                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4H Timeless Clovers">
+                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4-H Timeless Clovers">
                 <img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone">
                 <img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial">
                 <img src="/images/mcr/sponsors/mdg_FirstFarmersSB.png" alt="First Farmers State Bank">
@@ -461,7 +461,7 @@ placeholder="Tell us about yourself! (career/education/skills, mentoring experie
                 <img src="/images/mcr/sponsors/mdg_G3.png" alt="G3 Machining">
                 <img src="/images/mcr/sponsors/mdg_StateFarm.png" alt="State Farm">
                 <img src="/images/mcr/sponsors/mdg_McLeanCountyHomeEducation.png" alt="McLean County Home Education">
-                <img src="/images/mcr/sponsors/mdg_4H.png" alt="4H">
+                <img src="/images/mcr/sponsors/mdg_4H.png" alt="4-H">
                 <img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics">
 
           </div>
