--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -456,7 +456,7 @@
             <div class="fo-map">
               <div class="footer-logo"><img src="images/logo/logo-mcr.png" alt=""/></div>
               <p>MetalCow Robotics has been providing McLean County students a hands-on STEM education and career readiness experience since 2011.</p>
-              <p>A 4H-SPIN Club which competes in FIRST Robotics Competition, MetalCow Robotics is a 501.c.3 non-profit organization.</p>
+              <p>A 4-H SPIN Club which competes in FIRST Robotics Competition, MetalCow Robotics is part of a 501.c.3 non-profit organization.</p>
             </div>
           </div>
           <!--end item-->
@@ -497,7 +497,7 @@
                 <img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark">
 
                 <img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" >
-                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4H Timeless Clovers">
+                <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4-H Timeless Clovers">
                 <img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone">
                 <img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial">
                 <img src="/images/mcr/sponsors/mdg_FirstFarmersSB.png" alt="First Farmers State Bank">
@@ -509,7 +509,7 @@
                 <img src="/images/mcr/sponsors/mdg_G3.png" alt="G3 Machining">
                 <img src="/images/mcr/sponsors/mdg_StateFarm.png" alt="State Farm">
                 <img src="/images/mcr/sponsors/mdg_McLeanCountyHomeEducation.png" alt="McLean County Home Education">
-                <img src="/images/mcr/sponsors/mdg_4H.png" alt="4H">
+                <img src="/images/mcr/sponsors/mdg_4H.png" alt="4-H">
                 <img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics">
           </div>
           <!--end item-->
