Update apply.html (#9)
Update to the app page title

--- a/www/apply.html
+++ b/www/apply.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>MetalCow Robotics - FRC Team 4213 | Student Application </title>
+<title>MetalCow Robotics - FRC Team 4213 | Student Interests </title>
 <meta name="keywords" content="" />
 <meta name="description" content="">
 <meta name="author" content="">
