--- a/www/apply.html
+++ b/www/apply.html
@@ -113,7 +113,7 @@
         <div class="col-md-12 col-sm-12 col-xs-12 clearfix nopadding">
         <div class="header-inner"><div class="overlay">
        <div class="text text-center">
-    <h2 class="uppercase text-white mcr_title">Student Application</h2>
+    <h2 class="uppercase text-white mcr_title">Student Interests</h2>
     <h6 class="uppercase text-white sub-title"><em></em></h6>
     </div>
        </div>
