--- a/www/join.html
+++ b/www/join.html
@@ -235,7 +235,7 @@
                 <h2 class="font-weight-6 less-mar-1 text-white line-height-5">Find your passion</h2>
                 <div class="ce-title-line"></div>
                 <h6 class="ce-sub-text text-white raleway opacity-5">MetalCow students choose the role that interests them. The most important qualities the team is looking for in members is an interest in learning new things, and an enthusiasm to apply those things in an organization with an innovative mentality.
-                  The skills our team needs are wide-ranging, and everyone does a little bit of everything.  Don't worry if you are unsure of which role you will <em>click</em> with. Many times students join our team not really knowing where they want to focus, but find their passion as they explore different roles.</h6>
+                  The skills our team needs are wide-ranging, and everyone does a little bit of everything.  Don't worry if you are unsure of which role you will <em>click</em> with. Many times students join our team not knowing where they want to focus, but find their passion as they explore different roles.</h6>
               </div>
             </div>
             <div class="clearfix"></div>
