--- a/www/applySuccess.html
+++ b/www/applySuccess.html
@@ -12,7 +12,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="images/fav-icon.ico">
+<!--<link rel="shortcut icon" href="images/fav-icon.ico">-->
 <!--<link rel="stylesheet" type="text/css" href="js/bootstrap/bootstrap.min.css">-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -75,8 +75,9 @@
                     <li class=""> <a href="https://www.facebook.com/MetalCowRobotics" title=""><i aria-hidden="true" class="fab fa-facebook"></i></a> </li>
                     <li class=""> <a href="https://twitter.com/metalcow4213" title=""><i aria-hidden="true" class="fab fa-twitter-square"></i></a> </li>
                     <li class=""> <a href="https://www.youtube.com/user/TeamMetalCow" title=""><i aria-hidden="true" class="fab fa-youtube"></i></a> </li>
-                    <li class=""> <a href="https://www.instagram.com/metalcowrobotics" title=""><i aria-hidden="true" class="fab fa-instagram"></i></a> </li>
+                    <!--<li class=""> <a href="https://www.instagram.com/metalcowrobotics" title=""><i aria-hidden="true" class="fab fa-instagram"></i></a> </li>-->
                     <li class=""> <a href="https://github.com/MetalCowRobotics" title=""><i aria-hidden="true" class="fab fa-github"></i></a> </li>
+                    <li class=""> <a href="https://metalcowrobotics.com/store" title=""><i aria-hidden="true" class="fa fa-shopping-cart"></i></a> </li>
 
                     <li class="visible-xs menu-icon">
                       <a href="javascript:void(0)" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false"> <i aria-hidden="true" class="fa fa-bars"></i> </a>
@@ -241,26 +242,21 @@
             <h4 class="text-white less-mar3 font-weight-5">Sponsored By:</h4>
             <div class="clearfix"></div>
             <br/>
-                <img src="/images/mcr/sponsors/mdg_Rivian.png" alt="Rivian">
-                <img src="/images/mcr/sponsors/mdg_MonsantoFund.png" alt="Monsanto Fund">
+                <img src="/images/mcr/sponsors/mdg_Rivian.png" alt="Rivian Automotive">
+                <img src="/images/mcr/sponsors/mdg_Bayer.png" alt="Bayer Fund">
                 <img src="/images/mcr/sponsors/mdg_Slack.png" alt="Slack">
-                <img src="/images/mcr/sponsors/mdg_Wilber.png" alt="Wilber">
                 <img src="/images/mcr/sponsors/mdg_Ameren.png" alt="Ameren" >
-                <img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark">
 
-                <img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" >
+                <img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark">
+                <img src="/images/mcr/sponsors/mdg_StateFarm.png" alt="State Farm Foundations">
                 <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4-H Timeless Clovers">
                 <img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone">
-                <img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial">
-                <img src="/images/mcr/sponsors/mdg_FirstFarmersSB.png" alt="First Farmers State Bank">
-                <img src="/images/mcr/sponsors/mdg_CaseysGeneralStore.png" alt="Caseys General Store">
 
-                <img src="/images/mcr/sponsors/mdg_Autodesk.png" alt="Autodesk">
+                <img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial">
                 <img src="/images/mcr/sponsors/mdg_Epson.png" alt="Epson" >
                 <img src="/images/mcr/sponsors/mdg_Milwaukee.png" alt="Milwaukee Tools">
-                <img src="/images/mcr/sponsors/mdg_G3.png" alt="G3 Machining">
-                <img src="/images/mcr/sponsors/mdg_StateFarm.png" alt="State Farm">
                 <img src="/images/mcr/sponsors/mdg_McLeanCountyHomeEducation.png" alt="McLean County Home Education">
+
                 <img src="/images/mcr/sponsors/mdg_4H.png" alt="4-H">
                 <img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics">
 
@@ -288,8 +284,8 @@
 <script src="js/megamenu/js/main.js"></script>
 <script src="js/owl-carousel/owl.carousel.js"></script>
 <script src="js/owl-carousel/custom.js"></script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script type="text/javascript" src="js/gmaps/jquery.gmap.min.js"></script>
+<!--<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>-->
+<!--<script type="text/javascript" src="js/gmaps/jquery.gmap.min.js"></script>-->
 <script type="text/javascript" src="js/gmaps/examples.js"></script>
 <script type="text/javascript" src="js/smart-forms/jquery.form.min.js"></script>
 <script type="text/javascript" src="js/smart-forms/jquery.validate.min.js"></script>
