--- a/www/sponsor.html
+++ b/www/sponsor.html
@@ -12,7 +12,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="images/fav-icon.ico">
+<!--<link rel="shortcut icon" href="images/fav-icon.ico">-->
 <!--<link rel="stylesheet" type="text/css" href="js/bootstrap/bootstrap.min.css">-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -74,8 +74,9 @@
                     <li class=""> <a href="https://www.facebook.com/MetalCowRobotics" title=""><i aria-hidden="true" class="fab fa-facebook"></i></a> </li>
                     <li class=""> <a href="https://twitter.com/metalcow4213" title=""><i aria-hidden="true" class="fab fa-twitter-square"></i></a> </li>
                     <li class=""> <a href="https://www.youtube.com/user/TeamMetalCow" title=""><i aria-hidden="true" class="fab fa-youtube"></i></a> </li>
-                    <li class=""> <a href="https://www.instagram.com/metalcowrobotics" title=""><i aria-hidden="true" class="fab fa-instagram"></i></a> </li>
+                    <!--<li class=""> <a href="https://www.instagram.com/metalcowrobotics" title=""><i aria-hidden="true" class="fab fa-instagram"></i></a> </li>-->
                     <li class=""> <a href="https://github.com/MetalCowRobotics" title=""><i aria-hidden="true" class="fab fa-github"></i></a> </li>
+                    <li class=""> <a href="https://metalcowrobotics.com/store" title=""><i aria-hidden="true" class="fa fa-shopping-cart"></i></a> </li>
 
                     <li class="visible-xs menu-icon">
                       <a href="javascript:void(0)" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false"> <i aria-hidden="true" class="fa fa-bars"></i> </a>
@@ -198,35 +199,32 @@
        <br /><br />
      </div>
 
+
      <div class="col-md-12">
      <ul class="clients-list border-dark grid-cols-6">
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_Rivian.png" alt="Rivian"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_MonsantoFund.png" alt="Monsanto Fund"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_Slack.png" alt="Slack"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_Wilber.png" alt="Wilber"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_Ameren.png" alt="Ameren" ></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark"></a></li>
+       <li><a href="https://www.rivian.com/"><img src="/images/mcr/sponsors/mdg_Rivian.png" alt="Rivian"></a></li>
+       <li><a href="https://www.fund.bayer.us/"><img src="/images/mcr/sponsors/mdg_Bayer.png" alt="Bayer Fund"></a></li>
+       <li><a href="https://slack.com/help/articles/204368833-Slack-for-Nonprofits"><img src="/images/mcr/sponsors/mdg_Slack.png" alt="Slack"></a></li>
+       <li><a href="https://www.ameren.com/illinois/company/community"><img src="/images/mcr/sponsors/mdg_Ameren.png" alt="Ameren Illinois" ></a></li>
+       <li><a href="https://www.growmark.com/"><img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark"></a></li>
+       <li><a href="https://www.statefarm.com/about-us/community-involvement/community-grants/state-farm-foundations"><img src="/images/mcr/sponsors/mdg_StateFarm.png" alt="State Farm Foundations"></a></li>
      </ul>
      <ul class="clients-list border-dark grid-cols-6">
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" ></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_TimelessClovers.png"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_FirstFarmersSB.png" alt="First Farmers State Bank"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_CaseysGeneralStore.png" alt="Caseys General Store"></a></li>
+       <li><a href="https://www.facebook.com/timelesscloversmcl/"><img src="/images/mcr/sponsors/mdg_TimelessClovers.png"></a></li>
+       <li><a href="https://www.bridgestoneamericas.com/en/corporate-social-responsibility/community"><img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone"></a></li>
+       <li><a href="https://www.countryfinancial.com/"><img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial"></a></li>
+       <li><a href="https://epson.com/focused-giving-program"><img src="/images/mcr/sponsors/mdg_Epson.png" alt="Epson" ></a></li>
+       <li><a href="https://www.milwaukeetool.com/"><img src="/images/mcr/sponsors/mdg_Milwaukee.png" alt="Milwaukee Tools"></a></li>
+       <li><a href="#"><img src="/images/mcr/sponsors/mdg_McLeanCountyHomeEducation.png" alt="McLean County Home Education"></a></li>
      </ul>
-     <ul class="clients-list border-dark grid-cols-6">
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_Autodesk.png" alt="Autodesk"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_Epson.png" alt="Epson" ></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_Milwaukee.png" alt="Milwaukee Tools"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_G3.png" alt="G3 Machining"></a></li>
-       <li><a href="#"><img src="/images/mcr/sponsors/mdg_StateFarm.png" alt="State Farm"></a></li>
+     <!--<ul class="clients-list border-dark grid-cols-6">
+       <li><a href="https://www.facebook.com/G3Machining/"><img src="/images/mcr/sponsors/mdg_G3.png" alt="G3 Machining"></a></li>
        <li><a href="#"><img src="/images/mcr/sponsors/mdg_McLeanCountyHomeEducation.png" alt="McLean County Home Education"></a></li>
 
 
-       <!--<li><a href="#"><img src="/images/mcr/sponsors/mdg_4H.png" alt="4H"></a></li>-->
-       <!--<li><a href="#"><img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics"></a></li>-->
-     </ul>
+       <li><a href="https://4-h.org/"><img src="/images/mcr/sponsors/mdg_4H.png" alt="4H"></a></li>
+       <li><a href="https://www.firstinspires.org/robotics/frc"><img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics"></a></li>
+     </ul>-->
      </div>
      <!--end item-->
      </div>
@@ -489,28 +487,24 @@
             <h4 class="text-white less-mar3 font-weight-5">Sponsored By:</h4>
             <div class="clearfix small_sponsors"></div>
             <br/>
-                <img src="/images/mcr/sponsors/mdg_Rivian.png" alt="Rivian">
-                <img src="/images/mcr/sponsors/mdg_MonsantoFund.png" alt="Monsanto Fund">
+                <img src="/images/mcr/sponsors/mdg_Rivian.png" alt="Rivian Automotive">
+                <img src="/images/mcr/sponsors/mdg_Bayer.png" alt="Bayer Fund">
                 <img src="/images/mcr/sponsors/mdg_Slack.png" alt="Slack">
-                <img src="/images/mcr/sponsors/mdg_Wilber.png" alt="Wilber">
                 <img src="/images/mcr/sponsors/mdg_Ameren.png" alt="Ameren" >
-                <img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark">
 
-                <img src="/images/mcr/sponsors/mdg_ACC.png" alt="ACC" >
+                <img src="/images/mcr/sponsors/mdg_Growmark.png" alt="Growmark">
+                <img src="/images/mcr/sponsors/mdg_StateFarm.png" alt="State Farm Foundations">
                 <img src="/images/mcr/sponsors/mdg_TimelessClovers.png" alt="4-H Timeless Clovers">
                 <img src="/images/mcr/sponsors/mdg_Bridgestone.png" alt="Bridgestone">
-                <img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial">
-                <img src="/images/mcr/sponsors/mdg_FirstFarmersSB.png" alt="First Farmers State Bank">
-                <img src="/images/mcr/sponsors/mdg_CaseysGeneralStore.png" alt="Caseys General Store">
 
-                <img src="/images/mcr/sponsors/mdg_Autodesk.png" alt="Autodesk">
+                <img src="/images/mcr/sponsors/mdg_CountryFinancial.png" alt="Country Financial">
                 <img src="/images/mcr/sponsors/mdg_Epson.png" alt="Epson" >
                 <img src="/images/mcr/sponsors/mdg_Milwaukee.png" alt="Milwaukee Tools">
-                <img src="/images/mcr/sponsors/mdg_G3.png" alt="G3 Machining">
-                <img src="/images/mcr/sponsors/mdg_StateFarm.png" alt="State Farm">
                 <img src="/images/mcr/sponsors/mdg_McLeanCountyHomeEducation.png" alt="McLean County Home Education">
+
                 <img src="/images/mcr/sponsors/mdg_4H.png" alt="4-H">
                 <img src="/images/mcr/sponsors/mdg_First.png" alt="FIRST Robotics">
+
           </div>
           <!--end item-->
 
@@ -535,8 +529,8 @@
 <script src="js/megamenu/js/main.js"></script>
 <script src="js/owl-carousel/owl.carousel.js"></script>
 <script src="js/owl-carousel/custom.js"></script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script type="text/javascript" src="js/gmaps/jquery.gmap.min.js"></script>
+<!--<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>-->
+<!--<script type="text/javascript" src="js/gmaps/jquery.gmap.min.js"></script>-->
 <script type="text/javascript" src="js/gmaps/examples.js"></script>
 <script type="text/javascript" src="js/smart-forms/jquery.form.min.js"></script>
 <script type="text/javascript" src="js/smart-forms/jquery.validate.min.js"></script>
